--- a/scatterplot.css
+++ b/scatterplot.css
@@ -1,3 +1,7 @@
+body {
+	font-family: Consolas, sans-serif;	
+}
+
 .axis path,
 .axis line
 {
@@ -5,4 +9,18 @@
     stroke: grey;
     stroke-width: 1;
     shape-rendering: crispEdges;
+}
+
+h2,h3, p {
+
+	text-align: center;
+}
+
+h3, p {
+
+	/*margin: -10 auto;*/
+}
+
+.title {
+max-width: 350px;	
 }
